[feautre] add pomodoro sessions"
